# iced-gui

./: .tokeignore  Cargo.toml  README.md
locales/: de.json  en.json  it.json
src/: main.rs
src/backend/: config_file.rs  db_ops.rs  file_scanner.rs  mod.rs  utils.rs
src/components/: information_card.rs  languages.rs  mod.rs  modal_widget.rs  progress_sub.rs  updating_sub.rs  virus_card.rs
src/pages/: clean.rs  home.rs  infected.rs  info.rs  loading.rs  mod.rs  settings.rs  updating.rs
